# drf-scrud

./: LICENSE  README.md  db.sqlite3
core/: asgi.py  settings.py  urls.py  wsgi.py
django-crud/: LICENSE  README.md  setup.cfg
django-crud/drf_crud.egg-info/: PKG-INFO  SOURCES.txt
django-crud/drf_scrud.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django-crud/scrud/: managers.py  utils.py  views.py
