[metadata]
name = drf-scrud
version = 3.0
author = Shuruzer
author_email = eludeceti@gmail.com
maintainer = Shuruzer
maintainer_email = eludeceti@gmail.com
description = Django Rest Framework SCRUD viewset.
long_description = file:README.md
long_description_content_type = text/markdown
url = https://shuruzer.vercel.app
license = MIT
keywords = django drf crud drf-crud custom viewset
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
[options]
include_package_data = true
packages = find: